k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devshop-backend
  namespace: devsecops-team15
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devshop-backend
  template:
    metadata:
      labels:
        app: devshop-backend
    spec:
      # Skrypt inicjalizujący bazę danych uruchamiany przed startem aplikacji
      containers:
      - name: backend
        image: ghcr.io/becyb-team-15/devshop-backend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: devshop-backend-service
  namespace: devsecops-team15
spec:
  type: ClusterIP
  selector:
    app: devshop-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
