k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devshop-frontend
  namespace: devsecops-team15
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devshop-frontend
  template:
    metadata:
      labels:
        app: devshop-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/becyb-team-15/devshop-frontend:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: devshop-frontend-service
  namespace: devsecops-team15
spec:
  type: NodePort
  selector:
    app: devshop-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30000
