k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devshop-postgres
  namespace: devsecops-team15
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devshop-postgres
  template:
    metadata:
      labels:
        app: devshop-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: devshop-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: devshop-postgres-service
  namespace: devsecops-team15
spec:
  type: ClusterIP
  selector:
    app: devshop-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
