k8s/policy-block-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Audit
  rules:
  - name: require-specific-image-tag
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "DEVSECOPS ERROR: Using images with the ':latest' tag is strictly prohibited! Please specify a concrete image version."
      pattern:
        spec:
          containers:
          - image: "!*:latest"
